margin to padding for button fix on Safari

--- a/src/app/products/hire/modules/jobs/job-item-view/job-item-view.component.scss
+++ b/src/app/products/hire/modules/jobs/job-item-view/job-item-view.component.scss
@@ -200,8 +200,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 3px 0 0;
-    margin: 0 0 12px;
+    padding: 3px 0 12px;
 
     .title {
         font-size: 16px;
@@ -227,7 +226,7 @@
 .stage-actions {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 8px;
+    padding-bottom: 8px;
 
     .btn {
         background-color: $pink;
